Fixed footer spacing.

--- a/src/css/components/_site-footer.scss
+++ b/src/css/components/_site-footer.scss
@@ -23,4 +23,14 @@
   @include av-mq(lap-and-up) {
     margin: $lrg-row-gap 0 0.5em 0;
   }
+
+  @include av-mq(lap-and-up) {
+    ul {
+      display: flex;
+    }
+
+    li {
+      margin-right: $gutter-sml;
+    }
+  }
 }
